--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>schEDUle</title>
+<title>schEDUle Test</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link type="text/css" rel="stylesheet" href="css/styles.css" />
 	<link type="text/css" rel="stylesheet" href="css/font-awesome.min.css" />
